# PS22MS

./: .gitignore  README.md  Taskfile.yml  platformio.ini
common/master_system_command/: ms_command.h
common/serial/: serial.cpp  serial.h
controllers/dualsense/: CMakeLists.txt  README.md
controllers/dualsense/adapter/: adapter.cpp  adapter.h
controllers/dualsense/docs/: report-layouts.md
controllers/dualsense/interpreter/: interpreter.cpp  interpreter.h
controllers/dualsense/src/: main.cpp
dualsense_interpreter/: CMakeLists.txt  README.md
dualsense_interpreter/src/: main.cpp
dualshock2_interpreter/: dualshock2_interpreter.ino
lib/ms_communicator/: ms_communicator.h
ms_communicator/: README.md  platformio.ini
ms_communicator/lib/dualshock_2_interpreter/: dualshock_2_interpreter.cpp  dualshock_2_interpreter.h
ms_communicator/src/: main.cpp  ms_communicator.cpp
src/: main.cpp
